Fix z-index navbar mobile

--- a/app/assets/stylesheets/users/_subscriptions.scss
+++ b/app/assets/stylesheets/users/_subscriptions.scss
@@ -213,7 +213,7 @@
         }
         .btn-main {
           padding: 15px 47.5px !important;
-          font-size: 14px;
+          font-size: 14px !important;
           border-bottom: none !important;
         }
       }
